--- a/data_science_practice.ipynb
+++ b/data_science_practice.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "5f270548-f445-4fae-9a39-3320cd50bc73",
    "metadata": {},
    "outputs": [],
@@ -75,34 +75,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
+   "id": "ca31a8ff-9899-4c8f-abee-975c7486e4c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# humor = QuoteSpider()\n",
+    "# humor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "e41a1ee1-53c2-45b6-8780-2117805292a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from selenium import webdriver\n",
+    "# driver = webdriver.Firefox()\n",
+    "# driver.get(\"http://quotes.toscrape.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e5ae3826-1d7c-418a-bd5c-abad687ec4e9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'selenium'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[1;32m      2\u001b[0m driver \u001b[38;5;241m=\u001b[39m webdriver\u001b[38;5;241m.\u001b[39mFirefox()\n\u001b[1;32m      3\u001b[0m driver\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttp://quotes.toscrape.com\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Rank                                Bank name  \\\n",
+      "0      1  Industrial and Commercial Bank of China   \n",
+      "1      2               Agricultural Bank of China   \n",
+      "2      3                  China Construction Bank   \n",
+      "3      4                            Bank of China   \n",
+      "4      5                           JPMorgan Chase   \n",
+      "..   ...                                      ...   \n",
+      "95    96                            Handelsbanken   \n",
+      "96    97                 Industrial Bank of Korea   \n",
+      "97    98                                      DNB   \n",
+      "98    99                      Qatar National Bank   \n",
+      "99   100                                 VTB Bank   \n",
+      "\n",
+      "    Total assets (2023) (US$ billion)  \n",
+      "0                             6303.44  \n",
+      "1                             5623.12  \n",
+      "2                             5400.28  \n",
+      "3                             4578.28  \n",
+      "4                             3875.39  \n",
+      "..                                ...  \n",
+      "95                             351.79  \n",
+      "96                             345.81  \n",
+      "97                             339.21  \n",
+      "98                             338.14  \n",
+      "99                             326.85  \n",
+      "\n",
+      "[100 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\\from selenium import webdriver\n",
-    "driver = webdriver.Firefox()\n",
-    "driver.get(\"http://quotes.toscrape.com\")"
+    "import pandas as pd\n",
+    "URL = 'https://en.wikipedia.org/wiki/List_of_largest_banks'\n",
+    "tables = pd.read_html(URL)\n",
+    "df = tables[0]\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5cc56387-c61e-4d7b-8de8-9b2657a38899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Country/Territory IMF[1][12]            World Bank[13]             \\\n",
+      "    Country/Territory   Forecast       Year       Estimate       Year   \n",
+      "0               World  115494312       2025      105435540       2023   \n",
+      "1       United States   30338000       2025       27360935       2023   \n",
+      "2               China   19535000  [n 1]2025       17794782  [n 3]2023   \n",
+      "3             Germany    4922000       2025        4456081       2023   \n",
+      "4               Japan    4390000       2025        4212945       2023   \n",
+      "..                ...        ...        ...            ...        ...   \n",
+      "205          Kiribati        311       2024            279       2023   \n",
+      "206             Palau        308       2024            263       2023   \n",
+      "207  Marshall Islands        305       2024            284       2023   \n",
+      "208             Nauru        161       2024            154       2023   \n",
+      "209            Tuvalu         66       2024             62       2023   \n",
+      "\n",
+      "    United Nations[14]             \n",
+      "              Estimate       Year  \n",
+      "0            100834796       2022  \n",
+      "1             25744100       2022  \n",
+      "2             17963170  [n 1]2022  \n",
+      "3              4076923       2022  \n",
+      "4              4232173       2022  \n",
+      "..                 ...        ...  \n",
+      "205                223       2022  \n",
+      "206                225       2022  \n",
+      "207                279       2022  \n",
+      "208                147       2022  \n",
+      "209                 59       2022  \n",
+      "\n",
+      "[210 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "URL = 'https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(nominal)'\n",
+    "tables = pd.read_html(URL)\n",
+    "df = tables[2] # the required table will have index 2\n",
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef07d0e4-57ea-4be6-b430-c8133a68d534",
+   "id": "3007fa48-38a3-4a6e-ba39-921f5dcafcca",
    "metadata": {},
    "outputs": [],
    "source": []
